fixed sidebar alignment

--- a/youtube_clone/src/SidebarRow/style.css
+++ b/youtube_clone/src/SidebarRow/style.css
@@ -1,7 +1,12 @@
 .sidebarRow{
-    /* display: flex; */
+    display: flex;
     /* align-items: center; */
     padding:10px 20px;
+    align-items: center;
+    flex-direction: column;
+}
+.sideBarRow__container{
+    display: flex;
     justify-content: center;
 }
 .sidebarRow:hover{
@@ -15,6 +20,7 @@
     display: flex;
     color: #606060 ;
     font-size: x-large !important;
+    margin-bottom: 10px;
 
 }
 .sidebarRow__title{
